--- a/README
+++ b/README
@@ -1,3 +1,5 @@
 Analyze twitter streams to do sentimental analysis
 
 -- Currently fetching data to twitter & pushing it to MongoLab Cloud done !
+
+-- Pushing wordlist to cloud db for reference!
